--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{ "Tangarhöfði 2, Reykjavík, Iceland" }}</h1>
+
+
 
 <a href="https://www.facebook.com/profile.php?id=61566499326647"><img src="assets/images/Facebook_Logo_Primary.png" width="50" height="50"></a>
