--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ title: Home
 ---
 <h1>{{ "Tangarhöfði 2, Reykjavík, Iceland" }}</h1>
 
+<h1>{{ "Opening Hours" }}</h1>
+<h2>{{ "Monday 17:30 - 20:00" }}</h2>
+<h2>{{ "Tuesday 18:00 - 19:30" }}</h2>
 
+Appointments can be done through facebook <a href="https://www.facebook.com/profile.php?id=61566499326647"><img src="assets/images/Facebook_Logo_Primary.png" width="50" height="50"></a>
 
-<a href="https://www.facebook.com/profile.php?id=61566499326647"><img src="assets/images/Facebook_Logo_Primary.png" width="50" height="50"></a>
+suppliers
+- target ....
